--- a/index.css
+++ b/index.css
@@ -174,9 +174,10 @@ body {
 .myprofile {
     /* border: 1px solid white; */
     /* margin-left: 200px; */
-    border-radius: 5%;
+    /* border-radius: 100%; */
     width: 300px;
     height: 380px;
+
 }
 
 /* about div */
@@ -190,7 +191,7 @@ body {
 }
 
 .servicesPic {
-    border-radius: 100%;
+    border-radius: 10%;
     /* margin-left: 200px; */
     width: 300px;
     height: 400px;
